fixes z-index on event-form calendar

--- a/app/stylesheets/_date_picker.css.sass
+++ b/app/stylesheets/_date_picker.css.sass
@@ -1,11 +1,10 @@
-
 .ui-datepicker
   border: 1px solid $lightGray
   display: none
   background-color: white
   width: 240px
-  z-index: 1000000
   +border-radius($defaultRadius)
+
   .ui-datepicker-header
     background-color: $calendarTopColor
     +border-radius($defaultRadius)
