--- a/app/stylesheets/main_page/post_box.css.sass
+++ b/app/stylesheets/main_page/post_box.css.sass
@@ -168,6 +168,10 @@
         display: none
         margin-top: 15px
 
+      input.date
+        position: relative
+        z-index: 10000
+
       fieldset.event-times
         label
           margin-top: 0
